Change styling of image figures a bit. Clicking on whitespace no longer activates big images.

--- a/public/css/jflei.css
+++ b/public/css/jflei.css
@@ -6,13 +6,6 @@ html {
     word-wrap: break-word; /* force the page to fit on a phone */
 }
 
-img {
-    border-radius: 0px; /* disable rounded images */
-    margin-left: auto; /* center image on page */
-    margin-right: auto;
-    margin-bottom: 0; /* disable bottom padding to make room for figcaption */
-}
-
 .sidebar {
     background-image: url('/public/img/IMG_1532.JPG');
     background-size: cover;
@@ -22,6 +15,19 @@ img {
 
 .sidebar a {
     color: black;
+}
+
+div.figure-wrapper {
+    text-align: center;
+}
+
+figure {
+    display: inline-block;
+}
+
+figure img {
+    display: inline;
+    margin-bottom: 0; /* disable bottom padding to make room for figcaption */
 }
 
 figcaption {
